--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 .header {
-  background-color: grey;
+  background-color: rgba(183, 213, 243, 0.788);
   height: 5rem;
   margin: -10px;
 }
 
+/* Desktop version */
 ul.list {
   text-decoration: none;
   list-style: none;
@@ -14,7 +15,65 @@ ul.list {
   font-size: 25px;
 }
 
+i.fas.fa-bars {
+  display: none;
+}
+
 a {
   text-decoration: none;
+  color: rgb(66, 64, 64);
+}
+
+a:hover {
   color: blue;
 }
+
+/* ---------------------------------------------- */
+
+/* mobile version */
+.modal {
+  text-decoration: none;
+  list-style: none;
+  margin: -16px -16px 0px -16px;
+  display: none;
+  background-color: rgb(226, 250, 234);
+}
+
+.modal > li {
+  text-align: center;
+  font-size: 25px;
+  margin: 1rem;
+}
+
+@media (max-width: 500px) {
+  ul.list {
+    list-style: none;
+    display: none;
+    gap: 30px;
+    float: right;
+    margin-right: 30px;
+    font-size: 25px;
+  }
+
+  i.fas.fa-bars {
+    display: block;
+    font-size: 48px;
+    color: grey;
+    margin: 20px;
+    float: right;
+    display: block;
+  }
+}
+
+/* .modal {
+  text-decoration: none;
+  list-style: none;
+  margin: -16px -16px 0px -16px;
+  display: block;
+  background-color: rgb(226, 250, 234);
+}
+.modal > li {
+  text-align: center;
+  font-size: 25px;
+  margin: 1rem;
+} */
