--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ ul.list {
   font-size: 25px;
 }
 
+#hamburger {
+  display: none;
+}
+
 i.fas.fa-bars {
   display: none;
 }
@@ -55,25 +59,32 @@ a:hover {
     font-size: 25px;
   }
 
+  #hamburger {
+    display: block;
+    float: right;
+    background-color: rgb(91, 230, 230);
+    border-style: none;
+    height: inherit;
+  }
+
   i.fas.fa-bars {
     display: block;
     font-size: 48px;
-    color: grey;
-    margin: 20px;
+    color: black;
+    margin: 15px;
     float: right;
-    display: block;
   }
-}
 
-/* .modal {
-  text-decoration: none;
-  list-style: none;
-  margin: -16px -16px 0px -16px;
-  display: block;
-  background-color: rgb(226, 250, 234);
+  /* .modal {
+    text-decoration: none;
+    list-style: none;
+    margin: -16px -16px 0px -16px;
+    display: block;
+    background-color: rgb(226, 250, 234);
+  }
+  .modal > li {
+    text-align: center;
+    font-size: 25px;
+    margin: 1rem;
+  } */
 }
-.modal > li {
-  text-align: center;
-  font-size: 25px;
-  margin: 1rem;
-} */
