--- a/styles.css
+++ b/styles.css
@@ -32,23 +32,42 @@ a:hover {
   color: blue;
 }
 
-/* ---------------------------------------------- */
+/* show modal */
+.modal-show {
+  text-decoration: none;
+  list-style: none;
+  margin: -16px -16px 0px -16px;
+  display: block;
+  background-color: rgb(226, 250, 234);
+}
 
-/* mobile version */
-.modal {
+.modal-show > li {
+  text-align: center;
+  font-size: 25px;
+  margin: 1rem;
+  display: block;
+}
+
+/* hide modal */
+.modal-hide {
   text-decoration: none;
   list-style: none;
   margin: -16px -16px 0px -16px;
   display: none;
   background-color: rgb(226, 250, 234);
 }
-
-.modal > li {
+.modal-hide > li {
   text-align: center;
   font-size: 25px;
   margin: 1rem;
+  display: none;
 }
 
+/* ---------------------------------------------- */
+
+/* mobile version */
+
+/* If the broswer is less than 500pxk */
 @media (max-width: 500px) {
   ul.list {
     list-style: none;
@@ -74,17 +93,4 @@ a:hover {
     margin: 15px;
     float: right;
   }
-
-  /* .modal {
-    text-decoration: none;
-    list-style: none;
-    margin: -16px -16px 0px -16px;
-    display: block;
-    background-color: rgb(226, 250, 234);
-  }
-  .modal > li {
-    text-align: center;
-    font-size: 25px;
-    margin: 1rem;
-  } */
 }
