--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,32 @@ a:hover {
   display: none;
 }
 
+/* close buttons */
+/* .show-xbtn {
+  display: block;
+  float: right;
+  background-color: rgb(231, 46, 46);
+  border-style: none;
+  height: inherit;
+}
+
+.hide-xbtn {
+  display: none;
+  float: right;
+  background-color: rgb(231, 46, 46);
+  border-style: none;
+  width: fit-content;
+  height: inherit;
+}
+
+i.fas.fa-times-circle {
+  display: block;
+  font-size: 48px;
+  color: black;
+  margin: 15px;
+  float: right;
+} */
+
 /* ---------------------------------------------- */
 
 /* mobile version */
